--- a/Урок 15-20. Циклы/Python - HW16.html
+++ b/Урок 15-20. Циклы/Python - HW16.html
@@ -7,203 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #343434 0%, #363636 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    .console {
-      background-color: #1E1F22;
-      border-radius: 5px;
-      margin-top: 10px;
-      position: relative;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-
-    pre {
-      white-space: pre-wrap;
-      white-space: pre;
-      overflow-x: auto;
-      word-wrap: normal;
-      padding: 20px 10px;
-    }
-
-    .console .input {
-      color: #6AAB73;
-      font-style: italic;
-    }
-
-    code {
-      font-family: "JetBrains mono", monospace;
-      color: #BCBEC4;
-    }
-
-    .copy-button {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      padding: 5px 10px;
-      background-color: #FFC000;
-      color: #1E1F22;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-family: "JetBrains mono", monospace;
-      font-weight: bold;
-    }
-
-    .string {
-      color: #6AAB73;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .string-bracket,
-    .string-esc,
-    .keyword {
-      color: #CF8E6D;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .self {
-      color: #94558D;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .string-bracket-inner {
-      color: #BCBEC4;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .number {
-      color: #2AACB8;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .comments {
-      color: #7A7E85;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .metadata {
-      color: #B3AE60;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .built-in {
-      color: #8888C6;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .function {
-      color: #56A8F5;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .special-names {
-      color: #B200B2;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .keyword-argument {
-      color: #AA4926;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    ol {
-      counter-reset: list;
-      list-style: none;
-      padding-left: 0;
-      margin-bottom: 0;
-    }
-
-    ol li {
-      counter-increment: list;
-      position: relative;
-      padding-left: 1.2em;
-      padding-bottom: 1.2em;
-    }
-
-    ol li::before {
-      content: counter(list) ". ";
-      position: absolute;
-      left: 0;
-      color: #FFC000;
-      font-weight: bold;
-    }
-
-    .grey {
-      color: #BCBEC4;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .no-padding-bottom {
-      padding-bottom: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/hw.css">
 </head>
 
 <body>
@@ -221,10 +25,10 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> – <span
             class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span
             class="hl-text">вывести в консоль в порядке убывания все числа, которые нацело делятся на
-            <code><span class="number"><b>11</b></span></code> в указанном диапазоне</span>.</p>
+            <code class="python"><b>11</b></code> в указанном диапазоне</span>.</p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">1</span>
@@ -239,13 +43,13 @@
         <h2>Домашнее Задание 16.2</h2>
         <p><span class="hl-text">Teston Lebra</span> написал программу, которая получает данные от пользователя и
           преобразует эти данные в хэш-код (число). Если в этих данных содержатся ошибки, то цифра
-          <code><span class="number"><b>5</b></span></code> будет встречается в числе больше трёх раз. Напишите
+          <code class="python"><b>5</b></code> будет встречается в числе больше трёх раз. Напишите
           программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">проверяет
-            количество цифр</span> <code><span class="number"><b>5</b></span></code>. Если количество пятёрок больше
+            количество цифр</span> <code class="python"><b>5</b></code>. Если количество пятёрок больше
           трёх, то программа должна <span class="hl-text">вывести в консоль</span>
-          <code><span class="string"><b>"В данных пользователя присутствуют ошибки."</b></span></code>. В противном
+          <code class="python"><b>"В данных пользователя присутствуют ошибки."</b></code>. В противном
           случае программа должна <span class="hl-text">вывести в консоль</span>
-          <code><span class="string"><b>"Данные пользователя в порядке."</b></span></code>.
+          <code class="python"><b>"Данные пользователя в порядке."</b></code>.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
@@ -283,7 +87,7 @@
         <h2>Домашнее Задание 16.4</h2>
         <p>Напишите программу, которая <span class="hl-text">позволяет пользователю добавить товар в корзину (только
             стоимость)</span> и <span class="hl-text">оплатить эту корзину (итоговую стоимость)</span>. Считайте, что
-          изначально у пользователя <span class="number"><b>1000</b></span> денег.</p>
+          изначально у пользователя <code class="python"><b>1000</b></code> денег.</p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Ваш текущий баланс: 1000
@@ -321,7 +125,7 @@
           итоговую стоимость товара, а достаточно указать стоимость товара и его количество, а программа сама сделает
           подсчёты итоговой стоимости. Напишите программу, которая <span class="hl-text">запрашивает с консоли сперва
             стоимость</span>, а затем <span class="hl-text">количество</span>. Так до тех пор, пока <span
-            class="hl-text">пользователь просто не нажмёт клавишу</span> <span class="string"><b>"Enter"</b></span>
+            class="hl-text">пользователь просто не нажмёт клавишу <b>"Enter"</b></span>
           <span class="hl-text">во время ввода стоимости</span> или <span class="hl-text">количества</span>. Затем
           программа <span class="hl-text">выводит в консоль итоговую стоимость</span>.
         </p>
@@ -341,12 +145,12 @@
       <div class="right-rect">
         <h2>Домашнее Задание 16.6</h2>
         <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> стартовала акция на доставку. Если сумму заказа
-          перевернуть и получится та же самая сумма (число палиндром), то выдаётся купон в <span
-            class="number"><b>10%</b></span> на следующую покупку. Напишите программу, которая <span
+          перевернуть и получится та же самая сумма (число палиндром), то выдаётся купон в <code
+            class="python"><b>10%</b></code> на следующую покупку. Напишите программу, которая <span
             class="hl-text">запрашивает с консоли итоговую сумму</span> и <span class="hl-text">выводит в консоль</span>
-          <span class="string"><b>"Выдаётся <span class="number"><b>10%</b></span> купон."</b></span>, если сумма
-          является палиндромом. В противном случае <span class="hl-text">выводится</span> <span class="string"><b>"Купон
-              не выдаётся."</b></span>.
+          <code class="python"><b>"Выдаётся 10% купон."</b></code>, если сумма
+          является палиндромом. В противном случае <span class="hl-text">выводится</span> <code class="python"><b>"Купон
+              не выдаётся."</b></code>.
         <h3>Подсказка:</h3>
         <p>Вам нужно сделать копию числа и перевернуть его. Затем сравнивать исходное число и перевёрнутое.</p>
         <h3>Пример работы в консоли:</h3>
@@ -358,10 +162,10 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.7</h2>
-        <p><span class="hl-text">Teston Lebra</span> попросили доказать на практике, что шансы выпадения чисел <span
-            class="number"><b>1</b></span>, <span class="number"><b>2</b></span>, <span class="number"><b>3</b></span>,
-          <span class="number"><b>4</b></span>, <span class="number"><b>5</b></span> и <span
-            class="number"><b>6</b></span> на игральной кости около <span class="number"><b>16.6%</b></span>. Напишите
+        <p><span class="hl-text">Teston Lebra</span> попросили доказать на практике, что шансы выпадения чисел <code
+            class="python"><b>1</b></code>, <code class="python"><b>2</b></code>, <code class="python"><b>3</b></code>,
+          <code class="python"><b>4</b></code>, <code class="python"><b>5</b></code> и <code
+            class="python"><b>6</b></code> на игральной кости около <code class="python"><b>16.6%</b></code>. Напишите
           программу, которая <span class="hl-text">доказывает это при помощи симуляции</span>.
         </p>
         <h3>Подсказки:</h3>
@@ -376,35 +180,34 @@
                 Copy code</button>
               <pre><code class="python">from random import randint  # Подключение модуля random и импорт функции randint
 
-number = randint(1, 6)  # Генерация случайного четырёхзначного числа</code></pre>
+number = randint(1, 6)  # Генерация случайного числа от 1 до 6 включительно</code></pre>
             </div>
           </li>
           <li>Программа <span class="hl-text">не требует ввода</span> пользователя.</li>
           <li>Для решения задания вам понадобится <span class="hl-text">шесть переменных</span>, в которых будут
-            хранится количество выпадений чисел <span class="number"><b>1</b></span>, <span
-              class="number"><b>2</b></span>, <span class="number"><b>3</b></span>, <span
-              class="number"><b>4</b></span>, <span class="number"><b>5</b></span>, <span
-              class="number"><b>6</b></span>, <span class="hl-text">одна переменная</span> для того, чтобы подсчитывать
+            хранится количество выпадений чисел <code class="python"><b>1</b></code>, <code
+              class="python"><b>2</b></code>, <code class="python"><b>3</b></code>, <code
+              class="python"><b>4</b></code>, <code class="python"><b>5</b></code>, <code
+              class="python"><b>6</b></code>, <span class="hl-text">одна переменная</span> для того, чтобы подсчитывать
             шаги цикла, <span class="hl-text">одна переменная</span> для хранения случайного числа и <span
               class="hl-text">одна переменная</span> для того, чтобы хранить количество бросков.</li>
           <li>Генерируйте числа внутри цикла при помощи <code class="python"><b>randint(1, 6)</b></code>. Достаточно
-            <span class="number"><b>1000000</b></span> бросков.
+            <code class="python"><b>1000000</b></code> бросков.
           </li>
           <li class="no-padding-bottom">Чтобы найти процент выпадения чисел, нужно <span class="hl-text">количество
-              выпадений числа</span> поделить на <span class="hl-text">количество бросков</span> и умножить на <span
-              class="number"><b>100</b></span>. Например, если бросков <span class="number"><b>1000000</b></span> и
-            количество выпадания числа <span class="number"><b>1</b></span> равно <span
-              class="number"><b>166173</b></span>, то получаем:
-            <br><span class="number"><b>166173 <span class="grey">/</span> 1000000 <span class="grey">*</span> 100 <span
-                  class="grey">=</span> 16.6173%</b></span>
+              выпадений числа</span> поделить на <span class="hl-text">количество бросков</span> и умножить на <code
+              class="python"><b>100</b></code>. Например, если бросков <code class="python"><b>1000000</b></code> и
+            количество выпадания числа <code class="python"><b>1</b></code> равно <code
+              class="python"><b>166173</b></code>, то получаем:
+            <br><code class="python"><b>166173 / 1000000 * 100 = 16.6173%</b></code>
           </li>
         </ol>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.8</h2>
         <p><span class="hl-text">Teston Lebra</span> написал программу, которая запрашивает с консоли номер карты и
-          выводит в консоль <span class="string"><b>"Номер карты состоит только из чётных цифр."</b></span> или <span
-            class="string"><b>"В номере карты присутствуют нечётные цифры."</b></span> в зависимости от номера. Однако
+          выводит в консоль <code class="python"><b>"Номер карты состоит только из чётных цифр."</b></code> или <code
+            class="python"><b>"В номере карты присутствуют нечётные цифры."</b></code> в зависимости от номера. Однако
           программа работает некорректно. <span class="hl-text">Исправьте программу так, чтобы она работала верно, и
             рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
@@ -442,97 +245,6 @@ else:
       </div>
     </div>
   </div>
-  <script>
-    function copyCode(button) {
-      var codeBlock = button.nextElementSibling.querySelector('code');
-      var range = document.createRange();
-      range.selectNode(codeBlock);
-      window.getSelection().removeAllRanges();
-      window.getSelection().addRange(range);
-      document.execCommand('copy');
-      window.getSelection().removeAllRanges();
-      changeCopyButton(button);
-    }
-
-    function changeCopyButton(button) {
-      var originalHTML = button.innerHTML;
-      button.innerHTML = `
-        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
-    `;
-      setTimeout(function () {
-        button.innerHTML = originalHTML;
-      }, 2000);
-    }
-    document.addEventListener('DOMContentLoaded', function () {
-      const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function (codeBlock, index) {
-        let innerHTML = codeBlock.innerHTML;
-        console.log(index, innerHTML);
-        // STRING
-        let regex = /(?<!\\)(f?"[^"\\]*(?:\\.[^"\\]*)*")/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        regex = /(?<!\\)(f?'[^'\\]*(?:\\.[^'\\]*)*')/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        // KEYWORD CLASS
-        regex = /(class)(?!=)/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORDS
-        const keywords = [
-          'def', 'for', 'in', 'while', 'and', 'or', 'not',
-          'if', 'elif', 'else', 'continue', 'break', 'try', 'with',
-          'as', 'except', 'finally', 'return', 'True', 'False', 'from', 'import'
-        ];
-        regex = new RegExp(`\\b(${keywords.join('|')})\\b`, 'g');
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORD NUMBER
-        regex = /\b\d+(\.\d+)?/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="number">${match}</span>`;
-        });
-        // STRING-ESC
-        regex = /\\./g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string-esc">${match}</span>`;
-        });
-        // COMMENTS
-        regex = /(#.*$)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="comments">${match}</span>`;
-        });
-        // METADATA
-        regex = /^(\s*@\w+)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="metadata">${match}</span>`;
-        });
-        // SELF
-        regex = /\bself\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="self">${match}</span>`;
-        });
-        // BUILT-IN
-        regex = /\b(open|print|input|int|float|str|list|set|dict|range|len|sum|min|max)\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="built-in">${match}</span>`;
-        });
-        // FUNCTION
-        regex = /(<span class="keyword">def<\/span>)\s(\w+)\(/g;
-        innerHTML = innerHTML.replace(regex, '$1 <span class="function">$2</span>(');
-        // SPECIAL-NAMES
-        regex = /(<span class="function">)(__\w+__)(<\/span>)/g;
-        innerHTML = innerHTML.replace(regex, '$1<span class="special-names">$2</span>$3');
-        // KEYWORD-ARGUMENT
-        regex = /, (end|sep)=/g;
-        innerHTML = innerHTML.replace(regex, ', <span class="keyword-argument">$1</span>=');
-        codeBlock.innerHTML = innerHTML
-      });
-    });
-  </script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
