--- a/Урок 15-20. Циклы/Python - PT19-20.html
+++ b/Урок 15-20. Циклы/Python - PT19-20.html
@@ -7,109 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #CCCCCC 0%, #C9C9C9 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    .console {
-      background-color: #1E1F22;
-      border-radius: 5px;
-      margin-top: 10px;
-      position: relative;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-
-    pre {
-      white-space: pre-wrap;
-      white-space: pre;
-      overflow-x: auto;
-      word-wrap: normal;
-      padding: 20px 10px;
-    }
-
-    .console .input {
-      color: #6AAB73;
-      font-style: italic;
-    }
-
-    code {
-      font-family: "JetBrains mono", monospace;
-      color: #BCBEC4;
-    }
-
-    .string {
-      color: #6AAB73;
-    }
-
-    .number {
-      color: #2AACB8;
-    }
-  </style>
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/pt.css">
 </head>
 
 <body>
@@ -129,24 +27,30 @@
 </code></pre>
         </div>
 
-        <p>В программе есть две роли - <span class="hl-text">клиент</span> и <span class="hl-text">администратор</span>.
+        <p>В программе есть две роли – <span class="hl-text">клиент</span> и <span class="hl-text">администратор</span>.
           Условимся, что на всю программу у нас может быть только <span class="hl-text">один клиент</span> и только
           <span class="hl-text">один администратор</span>.
         </p>
-        <p>Выбор <span class="hl-text">пункта 1</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли логин</span>, <span class="hl-text">пароль</span>,
-          <span class="hl-text">имя</span>, <span class="hl-text">фамилию</span>,
-          <code><span class="number"><b>16</b></span></code>-<span class="hl-text">значный номер карты</span> и <span
-            class="hl-text">CVV/CVC код</span>.
-          <br>— Программа <span class="hl-text">заменяет данные старого клиента</span> на новые данные.
-          <br>— Возвращается в <span class="hl-text">меню входа</span>.
+        <p>Выбран <span class="hl-text">пункт 1</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли логин</span>, <span class="hl-text">пароль</span>,
+            <span class="hl-text">имя</span>, <span class="hl-text">фамилию</span>, <code
+              class="python"><b>16</b></code>-<span class="hl-text">значный номер карты</span> и <span
+              class="hl-text">CVV/CVC код</span>.
+          </li>
+          <li>Заменяет <span class="hl-text">все данные клиента на новые</span>.</li>
+        </ul>
         </p>
 
-        <p>Выбор <span class="hl-text">пункта 2</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли логин</span> и <span
-            class="hl-text">пароль</span>.
-          <br>— Если вводятся данные клиента, то <span class="hl-text">показывается меню клиента</span>.
-          <br>— Если вводятся данные администратора, то <span class="hl-text">показывается меню администратора</span>.
+        <p>Выбран <span class="hl-text">пункт 2</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>.
+          </li>
+          <li>Если логин и пароль от клиента, то <span class="hl-text">показывается меню клиента</span>.</li>
+          <li>Если логин и пароль от администратора, то <span class="hl-text">показывается меню администратора</span>.
+          </li>
+          <li>В противном случае <span class="hl-text">в консоль выводится сообщение о проблеме</span>.</li>
+        </ul>
         </p>
 
         <h3>Меню клиента:</h3>
@@ -158,49 +62,67 @@
 4. Завершить программу
 </code></pre>
         </div>
-        <p>В <span class="hl-text">меню клиента</span> выбор <span class="hl-text">пункта 1</span>:
-          <br>— Программа <span class="hl-text">выводит в консоль идентификатор клиента</span>, <span
-            class="hl-text">имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс
-            аккаунта</span>.
-          <br>— Программа <span class="hl-text">выводит в консоль меню</span>:
-        </p>
-        <div class="console">
-          <pre><code>Идентификатор: {идентификатор}
+        <p>Выбран <span class="hl-text">пункт 1</span>:
+        <ul>
+          <li>Программа <span class="hl-text">выводит в консоль идентификатор клиента</span>, <span
+              class="hl-text">имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс
+              аккаунта</span>.</li>
+          <li>Выводит в консоль <span class="hl-text">следующее меню</span>:
+            <div class="console">
+              <pre><code>Идентификатор: {идентификатор}
 Имя: {имя}
 Фамилия: {фамилия}
 Текущий баланс: {баланс}
-=============================
+===============================================
 1. Изменить имя
 2. Изменить фамилию
 3. Пополнить счёт
 4. Изменить данные карты
 5. Вернуться
-6. Завершить программу
-</code></pre>
-        </div>
-        <p>В <span class="hl-text">меню кабинета</span> выбор <span class="hl-text">пункта 3</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли
-            <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span
-            class="hl-text">CVV/CVC код</span>.
-          <br>— Если они совпадают с данными клиента, то программа <span class="hl-text">запрашивает с консоли
-            сумму</span> и <span class="hl-text">добавляет на баланс карты</span>. В противном случае программа <span
-            class="hl-text">возвращает в меню кабинета</span>.
+6. Завершить программу</code></pre>
+            </div>
+          </li>
+          <li>Выбран <span class="hl-text">пункт 1</span> или <span class="hl-text">2</span>:
+            <ul>
+              <li>Программа <span class="hl-text">запрашивает с консоли соответствующие данные</span>.</li>
+              <li>Заменяет <span class="hl-text">соответствующие данные у клиента</span>.</li>
+            </ul>
+          </li>
+          <li>Выбран <span class="hl-text">пункт 3</span>:
+            <ul>
+              <li>Программа <span class="hl-text">запрашивает с консоли <code class="python"><b>16</b></code>-значный
+                  номер карты</span> и <span class="hl-text">CVV/CVC код</span>.
+              </li>
+              <li>Если введённые данные совпадают с данными клиента, то программа <span class="hl-text">запрашивает с
+                  консоли сумму пополнения</span>.</li>
+              <li>Если сумма положительная, то <span class="hl-text">увеличивает баланс на сумму пополнения</span>.</li>
+              <li>В зависимости от результата <span class="hl-text">в консоли выводится соответствующее
+                  сообщение.</span>.
+              </li>
+            </ul>
+          </li>
+          <li>Выбран <span class="hl-text">пункт 4</span>:
+            <ul>
+              <li>Программа <span class="hl-text">запрашивает с консоли <code class="python"><b>16</b></code>-значный
+                  номер карты</span> и <span class="hl-text">CVV/CVC код</span>.
+              </li>
+              <li>Заменяет <span class="hl-text">данные карты на введённые данные</span>.</li>
+            </ul>
+          </li>
+          <li>Выбран <span class="hl-text">пункт 5</span>:
+            <ul>
+              <li>Программа <span class="hl-text">возвращается в меню клиента</span>.</li>
+            </ul>
+          </li>
+        </ul>
         </p>
-        <p>Выбор <span class="hl-text">пункта 4</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли
-            <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span
-            class="hl-text">CVV/CVC код</span>.
-          <br>— Программа <span class="hl-text">заменяет данные карты на введённые</span>.
-        </p>
-        <p>Выбор <span class="hl-text">пункта 5</span>:
-          <br>— Программа <span class="hl-text">возвращается в меню клиента</span>.
-        </p>
-        <p>В <span class="hl-text">меню клиента</span> выбор <span class="hl-text">пункта 2</span>:
-          <br>— Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span class="hl-text">меню
-            магазина</span>:
-        </p>
-        <div class="console">
-          <pre><code>Ваш текущий баланс: {баланс}
+
+        <p>Выбран <span class="hl-text">пункт 2</span>:
+        <ul>
+          <li>Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span class="hl-text">меню
+              магазина</span>:
+            <div class="console">
+              <pre><code>Ваш текущий баланс: {баланс}
 ====================================================
 1. Вернуться
 2. Завершить программу
@@ -209,14 +131,23 @@
 3. Хлеб - количество: 100, цена: 0.4
 4. Молоко - количество: 0, цена: 2.67
 5. Яйца (10шт) - количество: 30, цена: 2.49
-</code></pre>
-        </div>
-        <p>Выбор <span class="hl-text">товара</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли количество</span>.
-          <br>— Если товара достаточно, то <span class="hl-text">уменьшает количество товара</span>, <span
-            class="hl-text">вычисляет стоимость</span> и <span class="hl-text">вычитывает из текущего баланса
-            карты</span>.
+Выберите действие: <span class="input">...</span></code></pre>
+            </div>
+          </li>
+          <li>Выбран <span class="hl-text">пункт с товаром</span>:
+            <ul>
+              <li>Программа <span class="hl-text">запрашивает количество для выбранного товара</span>.</li>
+              <li>Вычисляет <span class="hl-text">итоговую стоимость</span> и <span class="hl-text">выводит в консоль
+                  полную информацию</span>.</li>
+              <li>Запрашивает <span class="hl-text">с консоли подтверждение на покупку</span>.</li>
+              <li>Если пользователь подтвердил, товара на складе достаточно и на балансе достаточное количество денег,
+                то программа <span class="hl-text">снимает деньги с баланса</span>, а также <span
+                  class="hl-text">отнимает количество доступного товара</span>.</li>
+            </ul>
+          </li>
+        </ul>
         </p>
+
         <h3>Меню администратора:</h3>
         <div class="console">
           <pre><code>Пользователь: {логин}    Роль: Администратор
@@ -226,47 +157,63 @@
 4. Завершить программу
 </code></pre>
         </div>
-        <p>Выбор <span class="hl-text">пункта 1</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли идентификатор клиента</span>.
-          <br>— Если введённый идентификатор верный, то программа <span class="hl-text">выводит в консоль имя</span>,
-          <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс</span>.
+        <p>Выбран <span class="hl-text">пункт 1</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли идентификатор клиента</span>.</li>
+          <li>Если введённый идентификатор совпадает с идентификатором клиента, то программа <span
+              class="hl-text">выводит в
+              консоль имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс
+              клиента</span>.
+          </li>
+        </ul>
         </p>
-        <p>Выбор <span class="hl-text">пункта 2</span>:
-          <br>— Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span
-            class="hl-text">меню</span>:
-        </p>
-        <div class="console">
-          <pre><code>1. Вернуться
+
+        <p>Выбран <span class="hl-text">пункт 2</span>:
+        <ul>
+          <li>Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span class="hl-text">меню
+              магазина</span>:
+            <div class="console">
+              <pre><code>1. Вернуться
 2. Завершить программу
 ====================================================
 Выберите товар, чтобы обновить его данные.
 3. Хлеб - количество: 100, цена: 0.4
 4. Молоко - количество: 0, цена: 2.67
 5. Яйца (10шт) - количество: 30, цена: 2.49
-</code></pre>
-        </div>
-        <p>Выбор <span class="hl-text">товара</span>:
-          <br>— Программа <span class="hl-text">делает копию данных выбранного товара</span>.
-          <br>— <span class="hl-text">Выводит в консоль данные выбранного товара</span> и <span class="hl-text">данные
-            копии</span>.
-          <br>— <span class="hl-text">Выводит в консоль меню изменения товара</span>:
-        </p>
-        <div class="console">
-          <pre><code>СТАРЫЕ ДАННЫЕ: {название_товара} - количество: {количество}, цена: {цена}
+Выберите действие: <span class="input">...</span></code></pre>
+            </div>
+          </li>
+          <li>Выбран <span class="hl-text">пункт с товаром</span>:
+            <ul>
+              <li>Программа <span class="hl-text">делает копию данных выбранного товара</span>.</li>
+              <li>Выводит <span class="hl-text">в консоль данные выбранного товара</span> и <span class="hl-text">данные
+                  копии</span>.</li>
+              <li>Выводит <span class="hl-text">в консоль меню изменения товара</span>:
+                <div class="console">
+                  <pre><code>СТАРЫЕ ДАННЫЕ: {название_товара} - количество: {количество}, цена: {цена}
 НОВЫЕ ДАННЫЕ: {название_товара} - количество: {количество}, цена: {цена}
 ====================================================
 1. Изменить название
 2. Изменить количество
 3. Изменить цену
 4. Подтвердить изменения и вернуться
-5. Вернуться
-</code></pre>
-        </div>
-        <p><span class="hl-text">Пункты 1</span>-<span class="hl-text">3</span> меняют данные только у <span
-            class="hl-text">копии</span>. При выборе <span class="hl-text">пункта 4</span> программа <span
-            class="hl-text">проверяет</span>, в порядке ли данные у копии и, если да, то <span class="hl-text">меняет
-            старые данные на изменённые</span>.</p>
+5. Вернуться</code></pre>
+                </div>
+              </li>
+              <li><span class="hl-text">Пункты 1</span>-<span class="hl-text">3</span> меняют данные только у <span
+                  class="hl-text">копии</span>.</li>
+              <li><span class="hl-text">Пункт 4</span> проверяет, положительные ли <span
+                  class="hl-text">количество</span> и
+                <span class="hl-text">цена у копии</span> и, если да, то <span class="hl-text">меняет старые данные на
+                  изменённые</span>.
+              </li>
+            </ul>
+          </li>
+        </ul>
+        </p>
       </div>
     </div>
   </div>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
