--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -68,10 +68,10 @@ to be</code></pre>
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
-          <pre><code>Введите сумму для конвертации: <span class="input">100</span>
-Введите исходную валюту: <span class="input">USD</span>
+          <pre><code>Введите исходную валюту: <span class="input">USD</span>
 Введите целевую валюту: <span class="input">EUR</span>
 Введите курс конверсии: <span class="input">0.92</span>
+Введите сумму для конвертации: <span class="input">100</span>
 
 100 USD = 92.0 EUR</code></pre>
         </div>
