Updated HW20-26 and PT21-27.

--- a/Урок 15-20. Циклы/Python - HW20.html
+++ b/Урок 15-20. Циклы/Python - HW20.html
@@ -102,7 +102,7 @@
                   консоли сумму пополнения</span>.</li>
               <li>Если сумма положительная, то <span class="hl-text">увеличивает баланс на сумму пополнения</span>.</li>
               <li>В зависимости от результата <span class="hl-text">в консоли выводится соответствующее
-                  сообщение.</span>.
+                  сообщение</span>.
               </li>
             </ul>
           </li>
