--- a/Урок 21-27. Строки. Списки/Python - PT26.html
+++ b/Урок 21-27. Строки. Списки/Python - PT26.html
@@ -7,101 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #CCCCCC 0%, #C9C9C9 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    .console {
-      background-color: #1E1F22;
-      border-radius: 5px;
-      margin-top: 10px;
-      position: relative;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-
-    pre {
-      white-space: pre-wrap;
-      white-space: pre;
-      overflow-x: auto;
-      word-wrap: normal;
-      padding: 20px 10px;
-    }
-
-    .console .input {
-      color: #6AAB73;
-      font-style: italic;
-    }
-
-    code {
-      font-family: "JetBrains mono", monospace;
-      color: #BCBEC4;
-    }
-  </style>
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/pt.css">
 </head>
 
 <body>
@@ -127,27 +33,80 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли все
-            оценки</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли оценки
-            до тех пор, пока не введут пустую строку</span>. Из введённых данных программа должна <span
-            class="hl-text">формировать список</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли оценки
-            до тех пор, пока не введут пустую строку</span>. Введённые данные программа должна <span
-            class="hl-text">добавлять список</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли
-            индекс</span> и <span class="hl-text">удаляет оценку по индексу</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 5</span> программа <span class="hl-text">запрашивает с консоли
-            индекс</span>, затем <span class="hl-text">показывает в консоли оценку под выбранным индексом</span>. После
-          этого программа <span class="hl-text">запрашивает с консоли новую оценку</span> и <span
-            class="hl-text">запрашивает подтверждение на изменение</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 6</span> программа <span class="hl-text">запрашивает с консоли
-            оценку</span>, затем <span class="hl-text">показывает в консоли количество указанной оценки</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 7</span> программа <span class="hl-text">выводит в консоль среднюю
-            арифметическую оценку</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 8</span> программа <span class="hl-text">выводит в консоль медианную
-            оценку</span>.</p>
+        <p>Выбран <span class="hl-text">пункт 1</span>:
+        <ul>
+          <li>Программа <span class="hl-text">выводит в консоль данные из списка в виде:</span>
+            <div class="console">
+              <pre><code>{оценка} {оценка} {оценка} ...</code></pre>
+            </div>
+          </li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 2</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли оценки до тех пор, пока не введут пустую
+              строку</span>.</li>
+          <li>Из введённых чисел <span class="hl-text">формируется новый список</span> и <span class="hl-text">основной
+              список заменяется новым списком</span>.</li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 3</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли оценки до тех пор, пока не введут пустую
+              строку</span>.</li>
+          <li>Введённые числа программа <span class="hl-text">добавляет в основной список</span>.</li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 4</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли индекс</span>.</li>
+          <li>Программа <span class="hl-text">удаляет по индексу оценку из списка</span>.</li>
+          <li>В зависимости от результата <span class="hl-text">в консоли выводится соответствующее сообщение</span>.
+          </li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 5</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли индекс</span>.</li>
+          <li>Выводит <span class="hl-text">в консоль оценку под указанным индексом</span>.</li>
+          <li>Запрашивает <span class="hl-text">с консоли новую оценку</span>.</li>
+          <li>Если оценка от <code class="python">1</code> до <code class="python">12</code> включительно, то программа
+            <span class="hl-text">запрашивает подтверждение на изменение</span>.
+          </li>
+          <li>Если пользователь подтвердил, то <span class="hl-text">оценка по указанному индексу заменяется на
+              новую</span>.</li>
+          <li>В зависимости от результата <span class="hl-text">в консоли выводится соответствующее сообщение</span>.
+          </li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 6</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли оценку</span>.</li>
+          <li>Выводит <span class="hl-text">в консоль количество указанной оценки в списке</span>.</li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 7</span>:
+        <ul>
+          <li>Программа <span class="hl-text">выводит в консоль среднюю арифметическую оценку</span>.</li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 8</span>:
+        <ul>
+          <li>Программа <span class="hl-text">делает копию списка оценок</span>.</li>
+          <li>Сортирует <span class="hl-text">копию списка оценок</span>.</li>
+          <li>Выводит <span class="hl-text">в консоль среднюю медианную оценку</span>.</li>
+        </ul>
+        </p>
       </div>
     </div>
   </div>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
