Fixed tasks in PT13-14.

--- a/Урок 10-14. Операторы ветвлений/Python - PT13.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT13.html
@@ -163,7 +163,7 @@
         <div class="console">
           <pre><code>Введите расстояние до пункта назначения в километрах: <span class="input">800</span>
 
-Рекомендуется доставка автомобилем.</code></pre>
+Рекомендуется доставка грузовым автомобилем.</code></pre>
         </div>
       </div>
       <div class="right-rect">
